test_cases/tests/axum/request_not_last.stderr
error[E0277]: the trait bound `Request<Body>: FromRequestParts<()>` is not satisfied
 --> tests/axum/request_not_last.rs:5:21
  |
5 | async fn handler(_: Request<Body>, _: Extension<String>) {}
  |                     ^^^^^^^^^^^^^ the trait `FromRequestParts<()>` is not implemented for `Request<Body>`
  |
  = help: the following other types implement trait `FromRequestParts<S>`:
            <() as FromRequestParts<S>>
            <(T1, T2) as FromRequestParts<S>>
            <(T1, T2, T3) as FromRequestParts<S>>
            <(T1, T2, T3, T4) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7, T8) as FromRequestParts<S>>
          and 24 others
  = help: see issue #48214
  = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
